# frontiergraph

./: .dockerignore  .gcloudignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PROVENANCE.md  DATA_README.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  cloudbuild.yaml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
agents/: CORPUS_AND_RETRIEVAL.md  DECISION_LOG.md  DEPLOYMENT_AND_STORAGE.md  FULL_HANDOFF_2026-03-11_ARCHIVED.md  FULL_HANDOFF_2026-04-08.md  FULL_HANDOFF_2026-04-14.md  LABEL_MAPPING_V2.md  LATEST.md  MEASUREMENT_AND_EVALUATION.md  NEW_THREAD_BRIEF.md  NEXT_STEPS.md  ONTOLOGY_AND_CONCEPTS.md  ONTOLOGY_V2_BUILD.md  PAPER_INCUBATION.md  PAPER_INCUBATION_V2ONTOLOGY.md  PROJECT_STATE.md  PROMPT_AND_EXTRACTION.md  RANKING_AND_SUPPRESSION.md  README.md  SESSION_HANDOFF_2026-03-01.md  THREAD_START_TEMPLATE.md  V2_THRESHOLD_STRATEGY.md  WEBSITE_AND_PRODUCT.md
app/: README.md  streamlit_app.py
codex_run/: generate_slides_assets.py  tmp_make_paper_figures.py
config/: config_causalclaims.yaml  config_causalclaims_method_v2_quality.yaml
context_extension_paper/: context_extension_paper.bib  context_extension_paper.tex
deploy/: PUBLIC_BETA.md  PUBLIC_RELEASE.md  public_beta.env.example  public_release.env.example
docs/: REPO_MAP.md  REPRODUCIBILITY.md
launchers/: run_ranker_gui.sh
next_steps/: appendix_llm_usefulness_prompt_v1.md  author_awareness_note.md  auxiliary_horizon_appendix_refresh_note.md  benchmark_anchor_rethink_note.md  benchmark_expansion_note.md  benchmark_strategy_decision.md  (+196 more)
site/: config.js  (+5 more)
(+726 files in other folders)
